--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+#config
+/server/Config/Config.ini
+/server/config/Config.ini
+/server/config/config.ini
