--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,6 +3,6 @@
   "name": "Tipskupon EM 2024",
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#098b54",
-  "background_color": "#067242"
+  "theme_color": "#fcbc02",
+  "background_color": "#224920"
 }
