--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,5 +4,33 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#fcbc02",
-  "background_color": "#224920"
+  "background_color": "#224920",
+  "icons": [
+    {
+      "src": "",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/png"
+    },
+    {
+      "src": "",
+      "sizes": "120x120",
+      "type": "image/png"
+    },
+    {
+      "src": "",
+      "sizes": "180x180",
+      "type": "image/png"
+    },
+    {
+      "src": "",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
