--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,28 +7,28 @@
   "background_color": "#224920",
   "icons": [
     {
-      "src": "64.png",
+      "src": "64px.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/png"
     },
     {
-      "src": "120.png",
+      "src": "120px.png",
       "sizes": "120x120",
       "type": "image/png"
     },
     {
-      "src": "180.png",
+      "src": "180px.png",
       "sizes": "180x180",
       "type": "image/png"
     },
     {
-      "src": "192.png",
+      "src": "192px.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "512.png",
+      "src": "512px.png",
       "sizes": "512x512",
       "type": "image/png"
     }
